[metadata]
name = 'InfiniTDServer'
version = '0.0.1'
description = 'The server for InfiniTD.'
author = 'R. Alex Hofer'
author_email = 'me@rofer.me'
license = 'MIT'
url = 'https://github.com/_/InfiniTDServer'

[requires]
python_version = ['2.7', '3.5', '3.6', 'pypy', 'pypy3']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'
